<resources>

    <string name="iv">ImageView</string>
    <string name="av_time">00:00</string>
    <string name="av_speed">Speed</string>
    <string name="av_hd">fix</string>
    <string name="av_replay">Replay</string>

    <string name="av_speed_0_5" translatable="false">0.50x</string>
    <string name="av_speed_0_75"  translatable="false">0.75x</string>
    <string name="av_speed_1_0"  translatable="false">1.00x</string>
    <string name="av_speed_1_25"  translatable="false">1.25x</string>
    <string name="av_speed_1_5"  translatable="false">1.50x</string>
    <string name="av_speed_1_75"  translatable="false">1.75x</string>
    <string name="av_speed_2_0"  translatable="false">2.00x</string>
    <string name="av_speed_3_0"  translatable="false">3.00x</string>
    <string name="av_speed_3_5"  translatable="false">3.50x</string>
    <string name="av_speed_4_0"  translatable="false">4.00x</string>

    <string name="av_danmaku_et_hint">Say something~</string>
    <string name="av_danmaku_btn">Send</string>

    <string name="av_lock_tip">Please unlock the screen first！</string>
    <string name="av_locked">Locked</string>
    <string name="av_unlocked">Unlocked</string>

    <string name="av_error">There is a small problem. Please try again later</string>
    <string name="play_source">Change source</string>


    <string name="live_close">Close</string>
    <string name="video_default">Default</string>
    <string name="fill">Fill</string>
    <string name="original_size">Original</string>
    <string name="center_cut">Center</string>
    <string name="av_share">Share</string>
    <string name="av_buffering">Buffering...</string>
    <string name="speeding">speed</string>
    <string name="adjust_brightness">Adjust brightness</string>
    <string name="av_guide_left_desc">Slide on the left</string>
    <string name="quick_play">Quick play</string>
    <string name="long_press">Long press</string>
    <string name="adjust_voice">Adjust voice</string>
    <string name="av_guide_right_desc">Slide on the right</string>
    <string name="change_source">Change source</string>
    <string name="try_fix">Try fix</string>
    <string name="tv_speed">Speed</string>
    <string name="long_press_seting">Long press speed</string>
</resources>
