<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_bottom_container"
        android:background="@drawable/player_mask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom">


        <LinearLayout
            android:id="@+id/ll_seek_layout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
<!--        播放暂停-->
            <ImageView
                android:id="@+id/iv_play"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="10dp"
                android:src="@drawable/selector_bot_play_button" />
<!--            下一集-->
            <ImageView
                android:id="@+id/iv_av_next"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/iv"
                android:padding="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/icon_play_next"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tv_curr_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                tools:text="00:00" />

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:max="100"
                android:maxHeight="2dp"
                android:minHeight="2dp"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:progressDrawable="@drawable/seek_progress"
                android:thumb="@drawable/seek_thumb"
                android:thumbOffset="0dp" />

            <TextView
                android:id="@+id/tv_total_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="14sp"

                tools:text="00:00" />
            <ImageView
                android:id="@+id/iv_fullscreen"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:padding="12dp"
                android:src="@drawable/selector_full_screen_button" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom_tools_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:gravity="center_vertical|right"
            android:orientation="horizontal">
            <!-- 画面缩放 -->
            <TextView
                android:id="@+id/tv_av_scale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="7dp"
                android:layout_gravity="right|center_vertical"
                android:paddingBottom="15dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/video_default"
                android:textColor="@android:color/white"
                android:textSize="14dp"
                />

            <TextView
                android:id="@+id/tv_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="7dp"
                android:layout_gravity="right|center_vertical"
                android:paddingBottom="15dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/av_speed"
                android:textColor="@android:color/white"
                android:textSize="14dp"
              />




        </LinearLayout>


    </LinearLayout>

    <ProgressBar
        android:id="@+id/pb_bottom_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_gravity="bottom"
        android:max="100"
        android:progressDrawable="@drawable/store_progress_bar_style"
        android:visibility="gone" />

</FrameLayout>