<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@null">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_av_h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50121653" />

    <ImageView
        android:id="@+id/iv_av_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/iv"
        android:scaleType="fitXY"
        android:src="@color/player_all_bg_color" />

    <View
        android:id="@+id/v_av_all_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/player_all_bg_color"
        android:visibility="gone" />

    <View
        android:id="@+id/v_av_top_bg"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginTop="37dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:background="@drawable/bg_play_top_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/v_av_bottom_bg"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/bg_play_bottom_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/iv_av_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/iv"
        android:padding="10dp"
        android:scaleType="fitXY"
        android:src="@drawable/icon_play_back"
        app:layout_constraintBottom_toBottomOf="@id/v_av_top_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/v_av_top_bg" />

    <com.xiaweizi.marquee.MarqueeTextView
        android:id="@+id/tv_av_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxEms="10"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/v_av_top_bg"
        app:layout_constraintStart_toEndOf="@id/iv_av_back"
        app:layout_constraintTop_toTopOf="@id/v_av_top_bg"
        app:scroll_first_delay="0"
        app:scroll_interval="8000"
        app:scroll_mode="mode_forever" />

    <TextView
        android:id="@+id/tv_av_announcement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textSize="12dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/v_av_top_bg" />

    <TextClock
        android:id="@+id/tc_av_localtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:format12Hour="HH:mm"
        android:format24Hour="HH:mm"
        android:gravity="center"
        android:padding="@dimen/av_tv_padding"
        android:textColor="@color/white"
        android:textSize="@dimen/av_tv_size"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/v_av_top_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/v_av_top_bg" />


    <!-- 画面缩放 -->
    <TextView
        android:id="@+id/tv_av_scale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="33dp"
        android:padding="5dp"
        android:text="默认"
        android:textColor="@color/white"
        android:textSize="@dimen/font_14sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/v_av_top_bg"
        app:layout_constraintEnd_toStartOf="@id/iv_av_download"
        app:layout_constraintTop_toTopOf="@id/v_av_top_bg" />

    <!-- 下载 -->
    <ImageView
        android:id="@+id/iv_av_download"
        android:layout_width="@dimen/av_top_or_bottom_iv_size"
        android:layout_height="@dimen/av_top_or_bottom_iv_size"
        android:layout_marginEnd="@dimen/av_top_or_bottom_iv_margin_end"
        android:contentDescription="@string/iv"
        android:scaleType="fitXY"
        android:src="@drawable/ic_av_download"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/v_av_top_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/v_av_top_bg" />

    <!-- 锁定 -->
    <ImageView
        android:id="@+id/iv_av_lock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/iv"
        android:padding="10dp"
        android:scaleType="fitXY"
        android:src="@drawable/selector_av_lock"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_av_pip"
        android:layout_width="@dimen/av_middle_iv_size"
        android:layout_height="@dimen/av_middle_iv_size"
        android:layout_marginEnd="@dimen/av_middle_iv_margin_end"
        android:layout_marginBottom="@dimen/av_middle_iv_margin_bottom"
        android:background="@drawable/shape_av_middle_iv_bg"
        android:contentDescription="@string/iv"
        android:scaleType="fitXY"
        android:src="@drawable/ic_av_pip"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/gl_av_h"
        app:layout_constraintEnd_toEndOf="parent" />




    <!-- 横屏布局 start -->
    <!-- 播放暂停按钮 -->
    <ImageView
        android:id="@+id/iv_av_play2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:contentDescription="@string/iv"
        android:padding="10dp"
        android:scaleType="fitXY"
        android:src="@drawable/selector_av_play"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@id/v_av_bottom_bg"
        app:layout_constraintStart_toStartOf="parent" />


    <!-- 当前播放时间 -->
    <TextView
        android:id="@+id/tv_av_curr_time2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:padding="@dimen/av_tv_padding"
        android:text="@string/av_time"
        android:textColor="@color/white"
        android:textSize="@dimen/font_10sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@id/v_av_bottom_bg"
        app:layout_constraintStart_toEndOf="@id/iv_av_play2" />

    <!-- 进度条 -->
    <SeekBar
        android:id="@+id/sb_av_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:max="1000"
        android:maxHeight="2dp"
        android:minHeight="2dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:progress="500"
        android:progressDrawable="@drawable/layer_av_progress_bar"
        android:thumb="@drawable/seekbar_thumb"
        android:thumbOffset="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/v_av_bottom_bg"
        app:layout_constraintEnd_toStartOf="@id/tv_av_total_time2"
        app:layout_constraintStart_toEndOf="@id/tv_av_curr_time2" />

    <!-- 视频总时长 -->
    <TextView
        android:id="@+id/tv_av_total_time2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="7dp"
        android:padding="@dimen/av_tv_padding"
        android:text="@string/av_time"
        android:textColor="@color/white"
        android:textSize="@dimen/font_10sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@id/v_av_bottom_bg"
        app:layout_constraintEnd_toEndOf="parent" />


    <!-- 倍速 -->
    <TextView
        android:id="@+id/tv_av_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:text="@string/av_speed"
        android:textColor="@color/white"
        android:textSize="@dimen/font_14sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/v_av_bottom_bg" />


    <!-- 亮度调节 -->
    <LinearLayout
        android:id="@+id/llBright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_play_bright" />

        <SeekBar
            android:id="@+id/seekBarBright"
            android:layout_width="148dp"
            android:layout_height="3dp"
            android:layout_marginLeft="-5dp"
            android:clickable="false"
            android:max="100"
            android:maxHeight="3dp"
            android:minHeight="3dp"
            android:progress="50"
            android:progressDrawable="@drawable/layer_av_progress_bar_bright_voice"
            android:thumb="@null" />

    </LinearLayout>

    <!-- 声音调节 -->
    <LinearLayout
        android:id="@+id/llVoice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_play_voice" />

        <SeekBar
            android:id="@+id/seekBarVoice"
            android:layout_width="148dp"
            android:layout_height="3dp"
            android:layout_marginLeft="-5dp"
            android:clickable="false"
            android:max="100"
            android:maxHeight="3dp"
            android:minHeight="3dp"
            android:progress="50"
            android:progressDrawable="@drawable/layer_av_progress_bar_bright_voice"
            android:thumb="@null" />

    </LinearLayout>
    <!-- 长按倍速播放 -->
    <LinearLayout
        android:id="@+id/long_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="@drawable/shape_speed_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

<!--        <ImageView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:src="@drawable/icon_play_bright" />-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:text="x3 "
            android:textSize="16dp"
            android:textStyle="bold"
            android:textColor="@color/color7A7BEB"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:layout_marginLeft="2dp"
            android:textSize="16dp"
            android:textColor="#fff"
            android:text="快进中"
            />

    </LinearLayout>

    <!-- 横屏布局 end -->

    <TextView
        android:id="@+id/tv_av_playtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:includeFontPadding="false"
        android:padding="@dimen/av_tv_padding"
        android:text="@string/av_time"
        android:textColor="@color/white"
        android:textSize="@dimen/av_tv_size"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_av_next"
        app:layout_constraintTop_toTopOf="@id/v_av_bottom_bg" />

    <!-- 快进/快退 -->
    <LinearLayout
        android:id="@+id/ll_quick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_quick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_play_quick_left" />

        <TextView
            android:id="@+id/tv_quick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="45:02"
            android:textColor="@color/white"
            android:textSize="@dimen/font_20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <!-- 解析中... -->
    <LinearLayout
        android:id="@+id/clpb_av_jiexi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:indeterminateBehavior="repeat"
            android:indeterminateDrawable="@anim/progressbar_drawable"
            android:indeterminateOnly="true" />

        <TextView
            android:id="@+id/tvJiexiMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="正在解析地址 1s"
            android:textColor="@color/white"
            android:textSize="12dp" />

    </LinearLayout>


    <!-- 重新播放 -->
    <ImageView
        android:id="@+id/iv_av_replay"
        android:layout_width="@dimen/av_middle_iv_size"
        android:layout_height="@dimen/av_middle_iv_size"
        android:layout_gravity="center"
        android:layout_marginTop="0pt"
        android:background="@drawable/shape_av_replay_bg"
        android:contentDescription="@string/iv"
        android:padding="10dp"
        android:src="@drawable/ic_av_replay"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- 重新播放 -->
    <TextView
        android:id="@+id/tv_av_replay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/av_tv_padding"
        android:text="@string/av_replay"
        android:textColor="@android:color/white"
        android:textSize="@dimen/av_tv_size"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/iv_av_replay"
        app:layout_constraintStart_toStartOf="@id/iv_av_replay"
        app:layout_constraintTop_toBottomOf="@id/iv_av_replay" />


    <!-- 跳过3s -->
    <FrameLayout
        android:id="@+id/llSkip"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:visibility="gone">

        <ImageView
            android:id="@+id/awvPlayer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/tvSkip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="30dp"
            android:background="@drawable/shape_skip"
            android:gravity="center"
            android:paddingLeft="15dp"
            android:paddingTop="3dp"
            android:paddingRight="15dp"
            android:paddingBottom="3dp"
            android:textColor="@color/white"
            android:textSize="14dp"
            tools:text="跳过 3s" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>